--- a/index.html
+++ b/index.html
@@ -3,49 +3,63 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>クイセ計算機</title>
+    <title>クイセ換金計算機</title>
     <style>
+        /* フォント設定 */
         body {
-            font-family: Arial, sans-serif;
-            padding: 20px;
+            font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+            background-color: #f5f5f7;
+            color: #333;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            text-align: center;
         }
+
+        /* コンテナ */
+        .container {
+            background-color: white;
+            border-radius: 12px;
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+            padding: 40px;
+            max-width: 400px;
+            width: 90%;
+        }
+
+        /* タイトル */
+        h1 {
+            font-size: 2.5em;
+            margin-bottom: 20px;
+            color: #000;
+        }
+
+        /* 入力とボタン */
         input, button {
-            padding: 10px;
+            width: 100%;
+            padding: 15px;
             margin: 10px 0;
             font-size: 1.2em;
+            border: 1px solid #ccc;
+            border-radius: 8px;
+            box-sizing: border-box;
         }
-    </style>
-</head>
-<body>
-    <h1>クイセ計算機</h1>
-    <label for="medals">所持メダル枚数:</label>
-    <input type="number" id="medals" min="0" placeholder="メダル枚数を入力">
-    <button onclick="calculate()">換金</button>
-    <p id="result"></p>
 
-    <script>
-        function calculate() {
-            let medals = parseInt(document.getElementById('medals').value);
-            let resultText = "";
-            let exchangeRates = [
-                { rate: 253, value: 4900 },
-                { rate: 51, value: 980 },
-                { rate: 11, value: 190 }
-            ];
-            let totalMoney = 0;
-            let remainingMedals = medals;
-
-            for (let i = 0; i < exchangeRates.length; i++) {
-                if (remainingMedals >= exchangeRates[i].rate) {
-                    let numExchanges = Math.floor(remainingMedals / exchangeRates[i].rate);
-                    totalMoney += numExchanges * exchangeRates[i].value;
-                    remainingMedals = remainingMedals % exchangeRates[i].rate;
-                }
-            }
-
-            resultText = `換金額は ${totalMoney}円で余りは ${remainingMedals} 枚です。`;
-            document.getElementById('result').innerText = resultText;
+        /* ボタンスタイル */
+        button {
+            background-color: #007aff;
+            color: white;
+            border: none;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
         }
-    </script>
-</body>
-</html>
+
+        button:hover {
+            background-color: #005eb8;
+        }
+
+        /* 結果表示 */
+        #result {
+            margin-top: 
