--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>クイセ換金計算機</title>
     <style>
-        /* フォントと背景 */
         body {
             font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
             background-color: #f5f5f7;
@@ -19,7 +18,6 @@
             text-align: center;
         }
 
-        /* コンテナ */
         .container {
             background-color: white;
             border-radius: 20px;
@@ -29,7 +27,6 @@
             width: 90%;
         }
 
-        /* タイトル */
         h1 {
             font-size: 1.8em;
             margin-bottom: 30px;
@@ -37,7 +34,6 @@
             line-height: 1.2;
         }
 
-        /* 入力フィールドとボタン */
         input, button {
             width: 100%;
             padding: 15px;
@@ -48,7 +44,6 @@
             box-sizing: border-box;
         }
 
-        /* ボタンスタイル */
         button {
             background-color: #007aff;
             color: white;
@@ -61,14 +56,12 @@
             background-color: #005eb8;
         }
 
-        /* 結果表示 */
         #result {
             margin-top: 20px;
             font-size: 1.4em;
             color: #555;
         }
 
-        /* メダルの結果を美しく表示 */
         #result span {
             font-weight: bold;
             color: #000;
@@ -80,13 +73,12 @@
         <h1>クイセ換金計算機</h1>
         <input type="number" id="medals" min="0" placeholder="メダル枚数を入力">
         <button onclick="calculate()">換金</button>
-        <p id="result"></p>
+        <div id="result"></div>
     </div>
 
     <script>
         function calculate() {
             let medals = parseInt(document.getElementById('medals').value);
-            let resultText = "";
             let exchangeRates = [
                 { rate: 253, value: 4900 },
                 { rate: 51, value: 980 },
@@ -103,7 +95,10 @@
                 }
             }
 
-            resultText = `換金額は <span>${totalMoney}円</span> で余りは <span>${remainingMedals} 枚</span>です。`;
+            let resultText = `
+                <span>換金額: ${totalMoney}円</span><br>
+                <span>余り: ${remainingMedals} 枚</span>
+            `;
             document.getElementById('result').innerHTML = resultText;
         }
     </script>
