--- a/index.html
+++ b/index.html
@@ -3,46 +3,68 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>クイセ換金計算機</title>
+  <title>パチンコ換金計算機</title>
   <style>
+    /* 基本設定 */
     body {
-      background-color: #f5f5f5;
-      font-family: 'Arial', sans-serif;
-      color: #2c2c2c;
-      padding: 20px;
+      background-color: #ffffff;
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+      color: #333333;
+      margin: 0;
+      padding: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
     }
 
     .container {
+      background-color: #f8f8f8;
+      border-radius: 12px;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+      padding: 20px;
+      width: 100%;
       max-width: 400px;
-      margin: 0 auto;
+      text-align: center;
     }
 
     .result {
       font-family: 'Courier New', Courier, monospace;
-      display: flex;
-      justify-content: space-between;
-      color: #2c2c2c;
-      margin-bottom: 10px;
-      width: 100%;
+      font-size: 24px;
+      color: #333333;
+      margin-bottom: 20px;
     }
 
     .result div {
-      flex: 1;
-      text-align: left;
+      margin: 10px 0;
     }
 
     #history {
-      margin-top: 20px;
-      font-family: 'Arial', sans-serif;
       font-size: 14px;
-      color: #2c2c2c;
-      width: 100%;
+      color: #666666;
+      text-align: left;
+      margin-top: 20px;
+      padding: 10px;
+      background-color: #ffffff;
+      border-radius: 8px;
+      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
     }
 
     #history div {
-      width: 100%;
-      overflow-x: auto;
       white-space: nowrap;
+      overflow-x: auto;
+      padding-bottom: 5px;
+    }
+
+    /* モバイル対応 */
+    @media (max-width: 600px) {
+      .result {
+        font-size: 20px;
+      }
+
+      #history {
+        font-size: 12px;
+      }
     }
   </style>
 </head>
