--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         body {
-            background-color: #444654; /* 背景色 */
+            background-color: #444654; /* ChatGPTの背景色 */
             color: #d1d5db;
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
             display: flex;
@@ -93,13 +93,19 @@
         #closing-time {
             margin-bottom: 20px;
             font-size: 18px;
-            color: #9ca3af;
+            color: #f0f0f0; /* 見やすい白色 */
+            font-weight: bold;
+        }
+        #weather {
+            font-size: 16px;
+            color: #d1d5db;
         }
     </style>
 </head>
 <body>
-    <h1>パチンコ換金計算機</h1>
+    <h1>クイセ換金計算機</h1>
     <div id="closing-time"></div>
+    <div id="weather"></div>
     
     <div id="medals-input">
         <input type="number" id="medals" placeholder="メダル枚数を入力">
@@ -144,7 +150,7 @@
             const result = calculateExchange(medals);
 
             const now = new Date();
-            const formattedDate = `${now.getFullYear()}${String(now.getMonth() + 1).padStart(2, '0')}${String(now.getDate()).padStart(2, '0')}.${String(now.getHours()).padStart(2, '0')}:${String(now.getMinutes()).padStart(2, '0')}:${String(now.getSeconds()).padStart(2, '0')}`;
+            const formattedDate = `${String(now.getMonth() + 1).padStart(2, '0')}/${String(now.getDate()).padStart(2, '0')} ${String(now.getHours()).padStart(2, '0')}:${String(now.getMinutes()).padStart(2, '0')}`;
 
             document.getElementById('amount').textContent = `${result.amount}円`;
             document.getElementById('remainder').textContent = `${result.remainder}枚`;
@@ -177,8 +183,22 @@
             setInterval(updateTime, 1000);
         }
 
+        async function fetchWeather() {
+            const response = await fetch('https://api.open-meteo.com/v1/forecast?latitude=35.1815&longitude=136.9066&hourly=precipitation_probability', {
+                method: 'GET'
+            });
+            const data = await response.json();
+            const today = new Date();
+            const todayDateString = today.toISOString().split('T')[0];
+            const todayWeather = data.hourly.time.find((time, index) => time.startsWith(todayDateString));
+
+            const precipitationProbability = data.hourly.precipitation_probability[0];
+            document.getElementById('weather').textContent = `愛知県名古屋市の当日の降水確率: ${precipitationProbability}%`;
+        }
+
         document.getElementById('exchange-btn').addEventListener('click', updateResult);
         updateClosingTime();
+        fetchWeather();
     </script>
 </body>
 </html>
