--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         body {
-            background-color: #444654; /* いい感じの背景色 */
+            background-color: #444654; /* ChatGPTの背景色 */
             color: #d1d5db;
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
             display: flex;
@@ -209,34 +209,39 @@
         }
 
         async function fetchWeather() {
-            const response = await fetch('https://api.open-meteo.com/v1/forecast?latitude=35.1815&longitude=136.9066&daily=temperature_2m_max,precipitation_probability_sum&timezone=Asia/Tokyo', {
-                method: 'GET'
-            });
-            const data = await response.json();
-            const today = new Date().toISOString().split('T')[0];
+    const response = await fetch('https://api.open-meteo.com/v1/forecast?latitude=35.1815&longitude=136.9066&daily=temperature_2m_max,precipitation_probability_sum&timezone=Asia/Tokyo', {
+        method: 'GET'
+    });
+    const data = await response.json();
+    const today = new Date().toISOString().split('T')[0];
 
-            const weather = data.daily;
-            const temperature = weather.temperature_2m_max[0];
-            const precipitationProbability = weather.precipitation_probability_sum[0];
+    const weather = data.daily;
+    const temperature = weather.temperature_2m_max[0];
+    const precipitationProbability = weather.precipitation_probability_sum[0];
 
-            // 色の設定
-            let color = '#ffffff'; // 白
-            if (precipitationProbability > 75) {
-                color = '#ff0000'; // 赤
-            } else if (precipitationProbability > 50) {
-                color = '#0000ff'; // 青
-            } else if (precipitationProbability > 25) {
-                color = '#00ff00'; // 緑
-            }
+    // 色の設定
+    let color = '#ffffff'; // 白
+    if (precipitationProbability > 75) {
+        color = '#ff0000'; // 赤
+    } else if (precipitationProbability > 50) {
+        color = '#ffff00'; // 黄
+    } else if (precipitationProbability > 25) {
+        color = '#00ff00'; // 緑
+    } else if (precipitationProbability > 10) {
+        color = '#0000ff'; // 青
+    }
 
-            document.getElementById('weather').innerHTML = `
-                <div class="weather-info">
-                    <span>気温: ${temperature}℃</span>
-                    <span style="color: ${color}">降水確率: ${precipitationProbability}%</span>
-                    <span>☀️</span>
-                </div>
-            `;
-        }
+    const weatherEmoji = precipitationProbability > 50 ? '🌧️' : '☀️';
+
+    document.getElementById('weather').innerHTML = `
+        <div class="weather-info">
+            <span>気温: ${temperature}℃</span>
+            <span style="color: ${color}">降水確率: ${precipitationProbability}%</span>
+            <span>${weatherEmoji}</span>
+        </div>
+    `;
+}
+
 
         document.getElementById('exchange-btn').addEventListener('click', updateResult);
         updateClosingTime();
