--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         body {
-            background-color: #444654; /* ChatGPTの背景色 */
-            color: #d1d5db;
+            background-color: #f4f4f9; 
+            color: #333; 
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
             display: flex;
             flex-direction: column;
@@ -18,7 +18,7 @@
         h1 {
             margin-bottom: 30px;
             font-size: 24px;
-            color: #e5e7eb;
+            color: #333;
         }
         #medals-input {
             margin-bottom: 20px;
@@ -91,15 +91,15 @@
             margin-bottom: 5px;
         }
         #closing-time {
-            margin-bottom: 20px;
+            margin-bottom: 10px;
             font-size: 18px;
-            color: #e5e7eb;
+            color: #333;
             font-weight: bold;
             text-align: center;
         }
         #weather {
             font-size: 16px;
-            color: #d1d5db;
+            color: #333;
             text-align: center;
             margin-bottom: 20px;
         }
@@ -121,6 +121,7 @@
 </head>
 <body>
     <h1>クイセ換金計算機</h1>
+    
     <div id="closing-time"></div>
     <div id="weather"></div>
     
@@ -166,6 +167,11 @@
 
         function updateResult() {
             const medals = parseInt(document.getElementById('medals').value);
+            if (isNaN(medals) || medals <= 0) {
+                alert('メダル枚数を正しく入力してください');
+                return;
+            }
+
             const result = calculateExchange(medals);
 
             const now = new Date();
@@ -183,7 +189,7 @@
 
             const newItem = document.createElement('div');
             newItem.className = 'history-item';
-            newItem.textContent = `${formattedDate} - 換金額: ${result.amount}円, 余り: ${result.remainder}枚`;
+            newItem.textContent = `所持コインを${medals}枚 - ${formattedDate} - 換金額: ${result.amount}円, 余り: ${result.remainder}枚`;
             history.appendChild(newItem);
         }
 
@@ -209,39 +215,38 @@
         }
 
         async function fetchWeather() {
-    const response = await fetch('https://api.open-meteo.com/v1/forecast?latitude=35.1815&longitude=136.9066&daily=temperature_2m_max,precipitation_probability_sum&timezone=Asia/Tokyo', {
-        method: 'GET'
-    });
-    const data = await response.json();
-    const today = new Date().toISOString().split('T')[0];
+            const response = await fetch('https://api.open-meteo.com/v1/forecast?latitude=35.1815&longitude=136.9066&daily=temperature_2m_max,precipitation_probability_sum&timezone=Asia/Tokyo', {
+                method: 'GET'
+            });
+            const data = await response.json();
+            const today = new Date().toISOString().split('T')[0];
 
-    const weather = data.daily;
-    const temperature = weather.temperature_2m_max[0];
-    const precipitationProbability = weather.precipitation_probability_sum[0];
+            const weather = data.daily;
+            const temperature = weather.temperature_2m_max[0];
+            const precipitationProbability = weather.precipitation_probability_sum[0];
 
-    // 色の設定
-    let color = '#ffffff'; // 白
-    if (precipitationProbability > 75) {
-        color = '#ff0000'; // 赤
-    } else if (precipitationProbability > 50) {
-        color = '#ffff00'; // 黄
-    } else if (precipitationProbability > 25) {
-        color = '#00ff00'; // 緑
-    } else if (precipitationProbability > 10) {
-        color = '#0000ff'; // 青
-    }
+            // 色の設定
+            let color = '#ffffff'; // 白
+            if (precipitationProbability > 75) {
+                color = '#ff0000'; // 赤
+            } else if (precipitationProbability > 50) {
+                color = '#ffff00'; // 黄
+            } else if (precipitationProbability > 25) {
+                color = '#00ff00'; // 緑
+            } else if (precipitationProbability > 10) {
+                color = '#0000ff'; // 青
+            }
 
-    const weatherEmoji = precipitationProbability > 50 ? '🌧️' : '☀️';
+            const weatherEmoji = precipitationProbability > 50 ? '🌧️' : '☀️';
 
-    document.getElementById('weather').innerHTML = `
-        <div class="weather-info">
-            <span>気温: ${temperature}℃</span>
-            <span style="color: ${color}">降水確率: ${precipitationProbability}%</span>
-            <span>${weatherEmoji}</span>
-        </div>
-    `;
-}
-
+            document.getElementById('weather').innerHTML = `
+                <div class="weather-info">
+                    <span>気温: ${temperature}℃</span>
+                    <span style="color: ${color};">降水確率: ${precipitationProbability}%</span>
+                    <span>${weatherEmoji}</span>
+                </div>
+            `;
+        }
 
         document.getElementById('exchange-btn').addEventListener('click', updateResult);
         updateClosingTime();
