--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         body {
-            background-color: #f4f4f9; /* 明るいグレーをベースにした背景色 */
-            color: #333; /* ダークグレーのテキスト色 */
+            background-color: #f0f0f0; /* 明るいグレー */
+            color: #333;
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
             display: flex;
             flex-direction: column;
@@ -16,91 +16,36 @@
             margin: 0;
         }
         h1 {
-            margin-bottom: 30px;
-            font-size: 24px;
-            color: #333;
+            margin-bottom: 20px;
         }
         #medals-input {
             margin-bottom: 20px;
-            width: 100%;
-            max-width: 300px;
-        }
-        input[type="number"] {
-            width: 100%;
-            padding: 15px;
-            font-size: 16px;
-            border-radius: 8px;
-            border: none;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            box-sizing: border-box;
-            margin-bottom: 10px;
-        }
-        input[type="number"]::placeholder {
-            color: #9ca3af;
         }
         #exchange-btn {
-            width: 100%;
-            max-width: 300px;
-            padding: 15px;
-            background-color: #4CAF50;
-            color: white;
-            border: none;
-            border-radius: 8px;
-            cursor: pointer;
-            font-size: 16px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            transition: background-color 0.3s ease;
-        }
-        #exchange-btn:hover {
-            background-color: #45a049;
+            margin-bottom: 20px;
         }
         #result {
-            display: flex;
-            flex-direction: column;
-            align-items: flex-start;
             margin-bottom: 20px;
-            width: 100%;
-            max-width: 300px;
         }
         .result-item {
             display: flex;
             justify-content: space-between;
-            width: 100%;
-            margin-bottom: 5px;
-        }
-        .label {
-            font-weight: bold;
-            width: 100px;
-        }
-        .value {
-            text-align: right;
-            flex-grow: 1;
+            width: 300px;
         }
         #history {
             width: 100%;
-            max-width: 300px;
-            background-color: #333;
-            padding: 15px;
-            margin-top: 20px;
-            border-radius: 8px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            color: #e5e7eb;
+            max-width: 600px;
         }
         .history-item {
-            font-size: 0.9em;
+            background-color: #fff;
+            border: 1px solid #ddd;
+            padding: 10px;
             margin-bottom: 5px;
         }
-        #closing-time {
-            margin-bottom: 10px;
-            font-size: 18px;
-            color: #333;
-            font-weight: bold;
-            text-align: center;
+        #no-history {
+            color: #999;
         }
         #weather {
-            font-size: 16px;
-            color: #333;
-            text-align: center;
             margin-bottom: 20px;
         }
         .weather-info {
@@ -109,13 +54,10 @@
             justify-content: center;
         }
         .weather-info span {
-            margin-left: 10px;
+            margin: 0 5px;
         }
-        #no-history {
-            font-size: 14px;
-            color: #9ca3af;
-            text-align: center;
-            margin-top: 10px;
+        #closing-time {
+            margin-bottom: 20px;
         }
     </style>
 </head>
@@ -183,8 +125,8 @@
             const history = document.getElementById('history');
             const noHistory = document.getElementById('no-history');
             
-            if (history.children.length === 1) { // 初回表示時
-                noHistory.style.display = 'none'; // 初回の「履歴が表示されます」を非表示にする
+            if (history.children.length === 1) {
+                noHistory.style.display = 'none';
             }
 
             const newItem = document.createElement('div');
@@ -195,7 +137,7 @@
 
         function updateClosingTime() {
             const closingTime = new Date();
-            closingTime.setHours(23, 50, 0); // 閉店時間を23:50に設定
+            closingTime.setHours(23, 50, 0);
 
             function updateTime() {
                 const now = new Date();
@@ -215,16 +157,14 @@
         }
 
         async function fetchWeather() {
+            const apiUrl = 'https://www.jma.go.jp/bosai/forecast/data/forecast/230000.json'; // 名古屋の予報データ
             try {
-                const response = await fetch('https://api.open-meteo.com/v1/forecast?latitude=35.1815&longitude=136.9066&daily=temperature_2m_max,precipitation_probability_sum&timezone=Asia/Tokyo');
+                const response = await fetch(apiUrl);
                 const data = await response.json();
-                const today = new Date().toISOString().split('T')[0];
 
-                const weather = data.daily;
-                const temperature = weather.temperature_2m_max[0];
-                const precipitationProbability = weather.precipitation_probability_sum[0];
-
-                // 色の設定
+                const temperature = data[0].timeSeries[0].areas[0].temperature.data[0].value;
+                const precipitationProbability = data[0].timeSeries[0].areas[0].precipitationProbability.data[0].value;
+                
                 let color = '#ffffff'; // 白
                 if (precipitationProbability > 75) {
                     color = '#ff0000'; // 赤
