--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         body {
-            background-color: #f0f0f0; /* 明るいグレー */
-            color: #333;
+            background-color: #444654; /* 明るいグレーをベースにした背景色 */
+            color: #333; /* ダークグレーのテキスト色 */
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
             display: flex;
             flex-direction: column;
@@ -16,36 +16,91 @@
             margin: 0;
         }
         h1 {
-            margin-bottom: 20px;
+            margin-bottom: 30px;
+            font-size: 24px;
+            color: #333;
         }
         #medals-input {
             margin-bottom: 20px;
+            width: 100%;
+            max-width: 300px;
+        }
+        input[type="number"] {
+            width: 100%;
+            padding: 15px;
+            font-size: 16px;
+            border-radius: 8px;
+            border: none;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            box-sizing: border-box;
+            margin-bottom: 10px;
+        }
+        input[type="number"]::placeholder {
+            color: #9ca3af;
         }
         #exchange-btn {
-            margin-bottom: 20px;
+            width: 100%;
+            max-width: 300px;
+            padding: 15px;
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            border-radius: 8px;
+            cursor: pointer;
+            font-size: 16px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            transition: background-color 0.3s ease;
+        }
+        #exchange-btn:hover {
+            background-color: #45a049;
         }
         #result {
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
             margin-bottom: 20px;
+            width: 100%;
+            max-width: 300px;
         }
         .result-item {
             display: flex;
             justify-content: space-between;
-            width: 300px;
+            width: 100%;
+            margin-bottom: 5px;
+        }
+        .label {
+            font-weight: bold;
+            width: 100px;
+        }
+        .value {
+            text-align: right;
+            flex-grow: 1;
         }
         #history {
             width: 100%;
-            max-width: 600px;
+            max-width: 300px;
+            background-color: #333;
+            padding: 15px;
+            margin-top: 20px;
+            border-radius: 8px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            color: #e5e7eb;
         }
         .history-item {
-            background-color: #fff;
-            border: 1px solid #ddd;
-            padding: 10px;
+            font-size: 0.9em;
             margin-bottom: 5px;
         }
-        #no-history {
-            color: #999;
+        #closing-time {
+            margin-bottom: 10px;
+            font-size: 18px;
+            color: #333;
+            font-weight: bold;
+            text-align: center;
         }
         #weather {
+            font-size: 16px;
+            color: #333;
+            text-align: center;
             margin-bottom: 20px;
         }
         .weather-info {
@@ -54,10 +109,13 @@
             justify-content: center;
         }
         .weather-info span {
-            margin: 0 5px;
+            margin-left: 10px;
         }
-        #closing-time {
-            margin-bottom: 20px;
+        #no-history {
+            font-size: 14px;
+            color: #9ca3af;
+            text-align: center;
+            margin-top: 10px;
         }
     </style>
 </head>
@@ -125,8 +183,8 @@
             const history = document.getElementById('history');
             const noHistory = document.getElementById('no-history');
             
-            if (history.children.length === 1) {
-                noHistory.style.display = 'none';
+            if (history.children.length === 1) { // 初回表示時
+                noHistory.style.display = 'none'; // 初回の「履歴が表示されます」を非表示にする
             }
 
             const newItem = document.createElement('div');
@@ -137,7 +195,7 @@
 
         function updateClosingTime() {
             const closingTime = new Date();
-            closingTime.setHours(23, 50, 0);
+            closingTime.setHours(23, 50, 0); // 閉店時間を23:50に設定
 
             function updateTime() {
                 const now = new Date();
@@ -157,14 +215,16 @@
         }
 
         async function fetchWeather() {
-            const apiUrl = 'https://www.jma.go.jp/bosai/forecast/data/forecast/230000.json'; // 名古屋の予報データ
             try {
-                const response = await fetch(apiUrl);
+                const response = await fetch('https://api.open-meteo.com/v1/forecast?latitude=35.1815&longitude=136.9066&daily=temperature_2m_max,precipitation_probability_sum&timezone=Asia/Tokyo');
                 const data = await response.json();
+                const today = new Date().toISOString().split('T')[0];
 
-                const temperature = data[0].timeSeries[0].areas[0].temperature.data[0].value;
-                const precipitationProbability = data[0].timeSeries[0].areas[0].precipitationProbability.data[0].value;
-                
+                const weather = data.daily;
+                const temperature = weather.temperature_2m_max[0];
+                const precipitationProbability = weather.precipitation_probability_sum[0];
+
+                // 色の設定
                 let color = '#ffffff'; // 白
                 if (precipitationProbability > 75) {
                     color = '#ff0000'; // 赤
@@ -187,7 +247,7 @@
                 `;
             } catch (error) {
                 console.error('Weather data fetch error:', error);
-                document.getElementById('weather').innerHTML = '天気情報の取得に失敗しました';
+                document.getElementById('weather').innerHTML = '';
             }
         }
 
