--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         body {
-            background-color: #444654; /* 明るいグレーをベースにした背景色 */
+            background-color: #f4f4f9; /* 明るいグレーをベースにした背景色 */
             color: #333; /* ダークグレーのテキスト色 */
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
             display: flex;
