--- a/index.html
+++ b/index.html
@@ -5,37 +5,63 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         body {
-            background-color: #f0f0f0; /* 明るいグレー */
+            background-color: #f8f8f8; /* 明るいグレー */
             color: #333;
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
             display: flex;
             flex-direction: column;
             align-items: center;
             justify-content: flex-start;
-            padding-top: 40px;
+            padding: 20px;
             margin: 0;
         }
         h1 {
             margin-bottom: 20px;
+            font-size: 24px;
+            color: #333;
         }
         #medals-input {
             margin-bottom: 20px;
+            width: 300px;
+            display: flex;
+            justify-content: center;
+        }
+        #medals {
+            width: 100%;
+            padding: 10px;
+            border: 1px solid #ddd;
+            border-radius: 8px;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+            font-size: 16px;
         }
         #exchange-btn {
+            background-color: #007bff;
+            color: #fff;
+            border: none;
+            padding: 12px 24px;
+            border-radius: 8px;
+            font-size: 16px;
+            cursor: pointer;
             margin-bottom: 20px;
+            transition: background-color 0.3s ease;
+        }
+        #exchange-btn:hover {
+            background-color: #0056b3;
         }
         #result {
             margin-bottom: 20px;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
             width: 300px;
+            text-align: center;
         }
         .result-item {
             display: flex;
             justify-content: space-between;
-            width: 100%;
             margin-bottom: 10px;
+            padding: 10px;
+            border-radius: 8px;
+            background-color: #fff;
+            border: 1px solid #ddd;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
         }
         #history {
             width: 300px;
@@ -48,20 +74,20 @@
             border: 1px solid #ddd;
             padding: 10px;
             margin-bottom: 5px;
-            border-radius: 5px;
+            border-radius: 8px;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+            font-size: 14px;
         }
         #no-history {
             color: #999;
             text-align: center;
+            font-size: 14px;
         }
         #closing-time {
             margin-bottom: 20px;
             font-size: 18px;
             font-weight: bold;
             color: #333;
-        }
-        #weather {
-            margin-bottom: 20px;
         }
     </style>
 </head>
