--- a/index.html
+++ b/index.html
@@ -22,12 +22,11 @@
         }
         #medals-input {
             margin-bottom: 20px;
-            width: 300px;
-            display: flex;
-            justify-content: center;
+            width: 100%;
+            max-width: 300px;
         }
         #medals {
-            width: 100%;
+            width: calc(100% - 22px);
             padding: 10px;
             border: 1px solid #ddd;
             border-radius: 8px;
@@ -38,20 +37,22 @@
             background-color: #007bff;
             color: #fff;
             border: none;
-            padding: 12px 24px;
+            padding: 12px 0;
             border-radius: 8px;
             font-size: 16px;
             cursor: pointer;
             margin-bottom: 20px;
             transition: background-color 0.3s ease;
             width: 100%;
+            max-width: 300px;
         }
         #exchange-btn:hover {
             background-color: #0056b3;
         }
         #result {
+            width: 100%;
+            max-width: 300px;
             margin-bottom: 20px;
-            width: 300px;
             text-align: center;
         }
         .result-item {
@@ -63,10 +64,11 @@
             background-color: #fff;
             border: 1px solid #ddd;
             box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+            font-size: 16px;
         }
         #history {
-            width: 300px;
-            max-width: 600px;
+            width: 100%;
+            max-width: 300px;
             display: flex;
             flex-direction: column-reverse; /* 最新の履歴が上に来るように */
             overflow-y: auto;
@@ -90,6 +92,9 @@
             font-size: 18px;
             font-weight: bold;
             color: #333;
+            width: 100%;
+            max-width: 300px;
+            text-align: center;
         }
     </style>
 </head>
